tests/machine/x/c/outer_join.error
tests/machine/x/c/outer_join.c: In function ‘main’:
tests/machine/x/c/outer_join.c:117:9: error: used struct type value where scalar is required
  117 |     if (row.order) {
      |         ^~~
tests/machine/x/c/outer_join.c:118:11: error: used struct type value where scalar is required
  118 |       if (row.customer) {
      |           ^~~
tests/machine/x/c/outer_join.c:120:21: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  120 |         printf("%.16g ", row.order.id);
      |                 ~~~~^    ~~~~~~~~~~~~
      |                     |             |
      |                     double        int
      |                 %.16d
tests/machine/x/c/outer_join.c:124:21: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  124 |         printf("%.16g\n", row.order.total);
      |                 ~~~~^     ~~~~~~~~~~~~~~~
      |                     |              |
      |                     double         int
      |                 %.16d
tests/machine/x/c/outer_join.c:127:21: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  127 |         printf("%.16g ", row.order.id);
      |                 ~~~~^    ~~~~~~~~~~~~
      |                     |             |
      |                     double        int
      |                 %.16d
tests/machine/x/c/outer_join.c:131:21: warning: format ‘%g’ expects argument of type ‘double’, but argument 2 has type ‘int’ [-Wformat=]
  131 |         printf("%.16g\n", row.order.total);
      |                 ~~~~^     ~~~~~~~~~~~~~~~
      |                     |              |
      |                     double         int
      |                 %.16d
